# colima-gui

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/src/: main.rs
